shenyu-examples/shenyu-examples-springcloud/k8s/ingress.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-test
  annotations:
      kubernetes.io/ingress.class: shenyu
      shenyu.apache.org/plugin-spring-cloud-enabled: 'true'
      shenyu.apache.org/plugin-spring-cloud-app-name: springCloudtest
      shenyu.apache.org/plugin-spring-cloud-path: /springcloud/new/feature/get/mapping/path
      shenyu.apache.org/plugin-spring-cloud-rpc-type: springCloud
      shenyu.apache.org/plugin-spring-cloud-servive-name: org.apache.shenyu.examples.springcloud.controller.NewFeatureController
      shenyu.apache.org/plugin-spring-cloud-method-name: getMappingUrl
spec:
  selector:
    app: shenyu-examples-springcloud
  ports:
    - port: 20880  # Assuming this is the spring cloud service port

---

apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-save
  annotations:
      kubernetes.io/ingress.class: shenyu
      shenyu.apache.org/plugin-spring-cloud-enabled: 'true'
      shenyu.apache.org/plugin-spring-cloud-app-name: springCloud-test
      shenyu.apache.org/plugin-spring-cloud-path: /springcloud/order/save
      shenyu.apache.org/plugin-spring-cloud-rpc-type: springCloud
      shenyu.apache.org/plugin-spring-cloud-servive-name: org.apache.shenyu.examples.springcloud.controller.OrderController
      shenyu.apache.org/plugin-spring-cloud-method-name: save
      shenyu.apache.org/plugin-spring-cloud-params-type: org.apache.shenyu.examples.springcloud.dto.OrderDTO
spec:
  selector:
    app: shenyu-examples-springcloud
  ports:
    - port: 20881  # Assuming this is the Spring Cloud service port

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-spring-cloud-enabled: 'true'
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: spring-cloud-test
                port:
                  number: 20880
            path: /springcloud/new/feature/get/mapping/path
            pathType: ImplementationSpecific
          - backend:
              service:
                name: spring-cloud-save
                port:
                  number: 20881
            path: /springcloud/order/save
            pathType: ImplementationSpecific
